--- a/client.html
+++ b/client.html
@@ -35,9 +35,31 @@
         }
       }
 
-      <!-- function createGame() {
+      function createGame() {
         function movePlayer(command) {
           console.log(`Moving ${command.playerId} with ${command.keyPressed}`)
+
+          const player = state.players[currentPlayerId]
+
+          if (command.keyPressed === 'ArrowUp' && player.y - 1 >= 0) {
+            player.y = player.y - 1
+            return
+          }
+
+          if (command.keyPressed === 'ArrowRight' && player.x + 1 < screen.width) {
+            player.x = player.x + 1
+            return
+          }
+
+          if (command.keyPressed === 'ArrowDown' && player.y + 1 < screen.height) {
+            player.y = player.y + 1
+            return
+          }
+
+          if (command.keyPressed === 'ArrowLeft' && player.x - 1 >= 0) {
+            player.x = player.x - 1
+            return
+          }
         }
 
         return {
@@ -45,32 +67,41 @@
         }
       }
 
-      const game = createGame() -->
+      const game = createGame()
+      const keyboardListener = createKeyboardListener()
+      keyboardListener.subscribe(game.movePlayer)
 
-      document.addEventListener('keydown', handleKeyDown)
-
-      function handleKeyDown(event){
-        const keyPressed = event.key
-        const player = state.players[currentPlayerId]
-
-        if (keyPressed === 'ArrowUp' && player.y -1 >= 0) {
-          player.y = player.y - 1
-          return
+      function createKeyboardListener() {
+        const state = {
+          observers: []
         }
 
-        if (keyPressed === 'ArrowRight' && player.x +1 < screen.width) {
-          player.x = player.x + 1
-          return
+        function subscribe(observerFunction) {
+          state.observers.push(observerFunction)
         }
 
-        if (keyPressed === 'ArrowDown' && player.y +1 < screen.height) {
-          player.y = player.y + 1
-          return
+        function notifyAll(command) {
+          console.log(`Notifying ${state.observers.length} observers`);
+
+          for (const observerFunction of state.observers) {
+            observerFunction(command)
+          }
+        }
+        document.addEventListener('keydown', handleKeyDown)
+
+        function handleKeyDown(event) {
+          const keyPressed = event.key
+
+          const command = {
+            playerId : 'player1',
+            keyPressed
+          }
+  
+          notifyAll(command)
         }
 
-        if (keyPressed === 'ArrowLeft' && player.x -1 >= 0) {
-          player.x = player.x - 1
-          return
+        return {
+          subscribe
         }
       }
 
