--- a/client.html
+++ b/client.html
@@ -25,45 +25,56 @@
       const context = screen.getContext('2d')
       const currentPlayerId = 'player1'
 
-      const state = {
-        players: {
-          'player1': { x: 1, y: 0 },
-          'player2': { x: 3, y: 0 }
-        },
-        fruits: {
-          'fruit1': { x: 2, y: 0 }
-        }
-      }
-
+      
       function createGame() {
+        const state = {
+          players: {
+            'player1': { x: 1, y: 0 },
+            'player2': { x: 3, y: 0 }
+          },
+          fruits: {
+            'fruit1': { x: 2, y: 0 }
+          }
+        }
+
         function movePlayer(command) {
           console.log(`Moving ${command.playerId} with ${command.keyPressed}`)
 
+          const allowedMoves = {
+            ArrowUp(player) {
+              if (player.y - 1 >= 0) {
+                player.y = player.y - 1
+              }
+            },
+            ArrowDown(player) {
+              if(player.y + 1 < screen.height){
+                player.y = player.y + 1
+              }
+            },
+            ArrowLeft(player) {
+              if( player.x - 1 >= 0){
+                player.x = player.x - 1
+              }
+            },
+            ArrowRight(player) {
+              if(player.x + 1 < screen.width){
+                player.x = player.x + 1
+              }
+            },
+          }
+
+          const keyPressed = command.keyPressed
           const player = state.players[currentPlayerId]
-
-          if (command.keyPressed === 'ArrowUp' && player.y - 1 >= 0) {
-            player.y = player.y - 1
-            return
-          }
-
-          if (command.keyPressed === 'ArrowRight' && player.x + 1 < screen.width) {
-            player.x = player.x + 1
-            return
-          }
-
-          if (command.keyPressed === 'ArrowDown' && player.y + 1 < screen.height) {
-            player.y = player.y + 1
-            return
-          }
-
-          if (command.keyPressed === 'ArrowLeft' && player.x - 1 >= 0) {
-            player.x = player.x - 1
-            return
+          const moveFunction = allowedMoves[keyPressed]
+          
+          if (moveFunction) {
+            moveFunction(player)
           }
         }
 
         return {
-          movePlayer
+          movePlayer,
+          state
         }
       }
 
@@ -111,15 +122,15 @@
         context.fillStyle = 'white'
         context.clearRect(0, 0, 10, 10)
 
-        for (const playerId in state.players) {
-          const player = state.players[playerId]
+        for (const playerId in game.state.players) {
+          const player = game.state.players[playerId]
 
           context.fillStyle = 'black'
           context.fillRect(player.x, player.y, 1, 1)
         }
 
-        for (const fruitId in state.fruits) {
-          const fruit = state.fruits[fruitId]
+        for (const fruitId in game.state.fruits) {
+          const fruit = game.state.fruits[fruitId]
 
           context.fillStyle = 'red'
           context.fillRect(fruit.x, fruit.y, 1, 1)
